--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 html, body {  
   margin: 0;
   padding: 0;
-  background-color: #645577;
+  background-color: #a8d68c;
 }
 .node {
   cursor: pointer;
